Fixed maybe the spacing for the team names.

--- a/index.css
+++ b/index.css
@@ -94,7 +94,6 @@ h2 {
 section.slide {
     height: 100%;
 }
-
 section.slide h2 {
     display: flex;
     background-color: black;
@@ -107,7 +106,6 @@ section.slide h2 {
     flex-direction: column;
     justify-content: end;
 }
-
 section.slide p,
 section.slide ul {
     max-width: 1200px;
@@ -115,7 +113,6 @@ section.slide ul {
     padding-left: clamp(1rem, 5vw, 3rem);
     padding-right: clamp(1rem, 5vw, 3rem);
 }
-
 section.slide ul li {
     margin-left: 25px;
 }
@@ -328,6 +325,9 @@ section#podcast .sources img {
     }
     section#team .teammate {
         margin-right: 50px;
+    }
+    section#team .teammate h3 {
+        margin-top: 50px;
     }
     section#team .teammate a {
         align-self: baseline;
